[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rag"
version = "0.0.1"
description = "A set of RAG implementations"
authors = [
  { name="João Pedro Alves", email="jotapedro1997@gmail.com" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Development Status :: 3 - Alpha",
]
requires-python = ">=3.9"

[tool.black]
line-length = 93
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''